Made changes to the swagger docs
