# go_social/cmd/api/health.go
@@ -6,12 +6,13 @@ import (
 )
 
 // healthCheckHandler reports service availability and metadata.
-// @Summary     Health check
-// @Description Returns service status, environment, and version.
-// @Tags        health
-// @Produce     json
-// @Success     200 {object} map[string]string
-// @Router      /health [get]
+//
+//	@Summary		Health check
+//	@Description	Returns service status, environment, and version.
+//	@Tags			health
+//	@Produce		json
+//	@Success		200	{object}	map[string]string
+//	@Router			/health [get]
 func (app *application) healthCheckHandler(w http.ResponseWriter, req *http.Request) {
 	if req.URL.Path != "/v1/health" {
 		log.Println("404 not Found")
